--- a/veoc/templates/veoc/quarantine_registration_form.html
+++ b/veoc/templates/veoc/quarantine_registration_form.html
@@ -82,7 +82,7 @@
                        </div>
                        <div class="form-group col-md-6">
                          <label for="callernumber">Email address : </label>
-                         <input class="form-control" type="email" id="email_address" name="email_address" placeholder="email address" required/>
+                         <input class="form-control" type="email" id="email_address" name="email_address" placeholder="email address"/>
                        </div>
                     </div>
                      <div class="form-row" id="county_div" style="display: none;">
