--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -145,6 +145,26 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
+        <script>
+            {% if user.groups.all.0.name == "National Managers" %}
+                console.log("User belongs to National Managers");
+            {% elif request.user|has_group:"National Watchers" %}
+                console.log("User belong to National Watchers");
+            {% elif request.user|has_group:"County Managers" %}
+                console.log("User belong to County Managers");
+            {% elif request.user|has_group:"Sub-County Managers" %}
+                console.log("User belong to Sub-County Managers");
+            {% elif request.user|has_group:"County Watchers" %}
+                console.log("User belong to County Watchers");
+            {% elif request.user|has_group:"Sub-County Watchers" %}
+                console.log("User belong to Sub-County Watchers");
+            {% elif request.user|has_group:"Border Watchers" %}
+                console.log("User belong to Border Watchers");
+            {% else %}
+              console.log("User doesn't belong to any group");
+            {% endif %}
+
+          </script>
           <li>
               <a href="/access_dashboard"><span class="fa-stack fa-lg pull-left"><i
                       class="fa fa-dashboard fa-stack-1x "></i></span> DASHBOARD</a>
@@ -158,9 +178,9 @@
                   <li><a href="/disease_register"><span class="fa-stack fa-lg pull-left"><i
                           class="fa fa-code-fork fa-stack-1x "></i></span>Diseases Register</a></li>
                   <li><a href="/event_register"><span class="fa-stack fa-lg pull-left"><i
-                          class="fa fa-child fa-stack-1x "></i></span>Events Register</a></li>
+                          class="fa fa-handshake-o fa-stack-1x "></i></span>Events Register</a></li>
                   <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i
-                      class="fa fa-archive fa-stack-1x "></i></span>Corona Quarantine</a></li>
+                      class="fa fa-address-card fa-stack-1x"></i></span>COVID-19 Quarantine</a></li>
               </ul>
           </li>
           <li>
@@ -171,8 +191,6 @@
                           class="fa fa-address-card fa-stack-1x "></i></span>Truck Driver Register</a></li>
                   <li><a href="/truck_quarantine_list"><span class="fa-stack fa-lg pull-left"><i
                           class="fa fa-list fa-stack-1x "></i></span>Drivers Quarantine List</a></li>
-                  <!-- <li><a href="/accomodation_list"><span class="fa-stack fa-lg pull-left"><i
-                          class="fa fa-code-fork fa-stack-1x "></i></span>Accomodation Details</a></li> -->
                   <li><a href="/truck_follow_up"><span class="fa-stack fa-lg pull-left"><i
                           class="fa fa-handshake-o fa-stack-1x "></i></span>Quarantine Follow Up</a></li>
                   <li><a href="/truck_ongoing_quarantine"><span class="fa-stack fa-lg pull-left"><i
@@ -226,10 +244,12 @@
                 <i class="fa fa-clipboard fa-stack-1x "></i>
               </span>JITENGE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
-                  <li><a href="/quarantine_list">Self Quarantine List</a></li>
-                  <li><a href="/follow_up">Ongoing Quarantine</a></li>
-                  <li><a href="/complete_quarantine">Completed Quarantine</a></li>
-                  <li><a href="/quarantine_site_report">Quarantine Site Report</a></li>
+                  <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
+                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
+                  <li><a href="/complete_quarantine"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Quarantine</a></li>
               </ul>
           </li>
           <li>
